# powerplant-coding-challenge

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
src/powerplant/entities/: gas_fired_plant_entity.py  power_plant_entity.py  turbo_jet_entity.py  wind_turbine_entity.py
src/powerplant/entities/factories/: powerplant_factories.py
src/powerplant/entities/tests/: test_entities.py
src/powerplant/usecases/: get_production_plan_usecase.py  test_get_production_plan_usecase.py
src/powerplant/views/: production_plan_route.py
src/powerplant/views/schemas/: production_plan_model.py
src/powerplant/views/tests/: test_production_plans_integration.py
src/powerplant/views/utils/: convert_request_to_entities.py
