[tool.poetry]
name = "extia-interview"
version = "0.1.0"
description = ""
authors = ["Clément MARCEL <lecramproject@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.23.2"
httpx = "^0.27.2"
pre-commit = "^4.0.1"
pydantic = "^2.9.2"
fastapi = "^0.115.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.1"
pytest = "^8.3.3"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
markers = [
    "unit: marks tests as unit",
    "integration: marks tests as integration",
]
